--- a/2ndProj/app/src/main/res/drawable-v24/buttonshape.xml
+++ b/2ndProj/app/src/main/res/drawable-v24/buttonshape.xml
@@ -5,7 +5,7 @@
         android:radius="50dp"
         />
     <solid
-        android:color="@color/white"
+        android:color="@color/twitterBlue"
         />
 
 
