--- a/2ndProj/app/src/main/res/layout/activity_account_password.xml
+++ b/2ndProj/app/src/main/res/layout/activity_account_password.xml
@@ -6,139 +6,95 @@
     android:layout_gravity="center"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
+
+    <ImageView
+        android:id="@+id/back_account_password_activity"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="7dp"
+        android:adjustViewBounds="true"
+        android:background="@color/colorTransparent"
+        android:clickable="true"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/back" />
+
+    <TextView
+        android:id="@+id/bank_name_account_password_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/nanumsquareb"
+        android:text="우리은행의 계좌 비밀번호를"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:fontFamily="@font/nanumsquareb"
+        android:text="입력 해 주세요."
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_marginTop="60dp">
 
-        <ImageButton
-            android:id="@+id/account_password_back_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:adjustViewBounds="true"
-            android:background="@color/colorTransparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_baseline_arrow_back_24" />
-
+        <EditText
+            android:id="@+id/accountPasswordEdit"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:ems="10"
+            android:hint="비밀번호 (숫자 4자리)"
+            android:inputType="numberPassword"
+            android:paddingLeft="20dp"
+            android:textSize="22dp"
+            tools:paddingRight="20dp" />
     </FrameLayout>
 
-    <LinearLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:paddingLeft="40dp">
+
+        <TextView
+            android:id="@+id/warningPasswordText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp"
+            android:fontFamily="@font/nanumsquarer"
+            android:text="비밀번호 자릿 수를 확인 바랍니다."
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="16dp" />
+    </FrameLayout>
+
+    <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="9"
-        android:orientation="vertical">
+        android:layout_weight="1" />
 
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingLeft="20dp">
-
-                        <TextView
-                            android:id="@+id/textView2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/nanumsquareeb"
-                            android:gravity="bottom"
-                            android:text="계좌번호 비밀번호를 "
-                            android:textSize="27dp" />
-                    </LinearLayout>
-
-                </FrameLayout>
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/nanumsquareeb"
-                        android:paddingLeft="20dp"
-                        android:text="입력해주세요"
-                        android:textSize="27dp" />
-                </FrameLayout>
-            </LinearLayout>
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <EditText
-                android:id="@+id/accountPasswordEdit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="15dp"
-                android:ems="10"
-                android:hint="비밀번호 (숫자 4자리)"
-                android:inputType="numberPassword"
-
-                android:paddingLeft="20dp"
-                android:textSize="22dp"
-                tools:paddingRight="20dp" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:paddingLeft="40dp">
-
-            <TextView
-                android:id="@+id/warningPasswordText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/nanumsquarer"
-                android:text="비밀번호 자릿 수를 확인 바랍니다."
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="16dp" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <Button
-                android:id="@+id/account_data_button"
-                style="@android:style/ButtonBar"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button_line_shape"
-
-                android:fontFamily="@font/nanumsquareb"
-
-                android:text="다 음"
-                android:textSize="20dp" />
-
-        </FrameLayout>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/next_account_password_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/twitterBlue"
+        android:fontFamily="@font/nanumsquareeb"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="N E X T"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
 </LinearLayout>
