--- a/2ndProj/app/src/main/res/layout/activity_page2.xml
+++ b/2ndProj/app/src/main/res/layout/activity_page2.xml
@@ -13,10 +13,8 @@
         android:id="@+id/linear_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_main_button"
-        android:backgroundTint="@color/twitterLowBlue"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:paddingTop="30dp"
         android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,10 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanumsquareeb"
+            android:layout_marginTop="40dp"
             android:gravity="center_horizontal"
             android:text="수신지역 설정"
-
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="30sp" />
 
         <TextView
@@ -41,21 +39,21 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
-            android:text="재난문자 수신을 원하는 지역을 선택해주세요!"
-            android:textColor="@color/colorGray" />
+            android:text="재난문자 수신을 원하는 지역을 추가 해 주세요!"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
             android:text="부모님, 할머니, 친구 등의 재난상황을 알 수 있어요!"
-            android:textColor="@color/colorGray" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView4"
@@ -65,7 +63,7 @@
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center"
             android:text="반드시 하나 이상의 위치를 설정해주세요!"
-            android:textColor="@color/colorGray" />
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <LinearLayout
@@ -86,7 +84,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/colorGray"
+            android:orientation="vertical"
+            android:overScrollMode="never">
 
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
@@ -99,9 +100,10 @@
         android:background="@drawable/buttonshape"
         android:backgroundTint="@color/twitterLowBlue"
         android:gravity="center"
-        android:text="추가"
+        android:text="추 가"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:fontFamily="@font/nanumsquareb"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -112,10 +114,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_main_button_rotate180"
+        android:background="@color/twitterBlue"
         android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,36 +123,16 @@
         app:layout_constraintVertical_bias="1.0">
 
         <TextView
-            android:id="@+id/back"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/buttonshape"
-            android:backgroundTint="@color/white"
-            android:gravity="center"
-            android:text="BACK"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
             android:id="@+id/next"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/buttonshape"
-            android:backgroundTint="@color/white"
             android:gravity="center"
-            android:text="NEXT"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:padding="15dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/nanumsquareeb"
+            android:text="N E X T"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
