--- a/2ndProj/app/src/main/res/layout/activity_page4.xml
+++ b/2ndProj/app/src/main/res/layout/activity_page4.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".start.activity.Page4Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_main_button_rotate180"
+        android:background="@color/twitterBlue"
         android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,36 +20,16 @@
         app:layout_constraintVertical_bias="1.0">
 
         <TextView
-            android:id="@+id/back"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
+            android:id="@+id/next_page4_activity"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/buttonshape"
-            android:backgroundTint="@color/white"
             android:gravity="center"
-            android:text="BACK"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/next"
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/buttonshape"
-            android:backgroundTint="@color/white"
-            android:gravity="center"
-            android:text="SKIP"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:padding="15dp"
+            android:textSize="20dp"
+            android:fontFamily="@font/nanumsquareeb"
+            android:text="N E X T"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
     <LinearLayout
@@ -57,25 +37,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_main_button"
-        android:backgroundTint="@color/twitterLowBlue"
+        android:backgroundTint="@color/white"
         android:orientation="vertical"
-        android:paddingTop="30dp"
         android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/back_page4_activity"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="7dp"
+            android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
+            android:clickable="true"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/nanumsquareeb"
             android:gravity="center_horizontal"
-            android:text="MyData"
-
-            android:textColor="@color/white"
+            android:text="계좌 연결"
+            android:textColor="@color/black"
             android:textSize="30sp" />
 
         <TextView
@@ -84,11 +76,11 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
             android:text="은행계좌를 연결해보세요! (스킵가능합니다) "
-            android:textColor="@color/colorGray" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView9"
@@ -97,8 +89,8 @@
             android:layout_marginBottom="3dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
-            android:text="위치데이터를 통해 더 정확한 코로나 알림을 받을 수 있어요!"
-            android:textColor="@color/colorGray" />
+            android:text="결제 내역 분석을 통한 재난문자를 받아 보실 수 있습니다!"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -109,17 +101,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="@drawable/button_line_shape"
-            android:fontFamily="@font/nanumsquareb"
-            android:gravity="center"
-            android:text="CSV 데이터 등록하기"
-            android:textSize="24sp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.33">
 
         <TextView
             android:id="@+id/bank_data"
@@ -128,9 +111,10 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/button_line_shape"
             android:fontFamily="@font/nanumsquareb"
+            android:textColor="@color/black"
             android:gravity="center"
-            android:text="계좌 데이터 등록하기"
-            android:textSize="24sp" />
+            android:text="계좌 연결하기"
+            android:textSize="17dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
