--- a/2ndProj/app/src/main/res/layout/activity_search_bank.xml
+++ b/2ndProj/app/src/main/res/layout/activity_search_bank.xml
@@ -1,13 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:background="@drawable/border_normal"
+    android:background="@color/white"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/back_search_bank_activity"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:clickable="true"
+        android:padding="10dp"
+        android:layout_marginTop="7dp"
+        android:adjustViewBounds="true"
+        android:background="@color/colorTransparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/back"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/nanumsquareb"
+        android:text="등록할 계좌의"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:fontFamily="@font/nanumsquareb"
+        android:text="은행을 선택해주세요."
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +68,7 @@
                 android:paddingLeft="43dp"
                 android:singleLine="true"
                 android:textColorHint="@android:color/darker_gray"
+                android:fontFamily="@font/nanumsquarer"
                 android:textSize="17dp" />
 
             <ImageView
@@ -59,7 +93,24 @@
             android:numColumns="3"
             android:verticalSpacing="20dp" />
 
-
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:id="@+id/next_search_bank_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:background="@color/twitterBlue"
+        android:padding="15dp"
+        android:textSize="20dp"
+        android:fontFamily="@font/nanumsquareeb"
+        android:text="N E X T"
+        android:textColor="@color/white" />
 
 </LinearLayout>
