--- a/2ndProj/app/src/main/res/layout/item_card_company.xml
+++ b/2ndProj/app/src/main/res/layout/item_card_company.xml
@@ -4,42 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:orientation="vertical"
-    tools:background="#E2E2E2">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:background="@drawable/item_card_commpany"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/image_card_company"
             android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:adjustViewBounds="true"
+            android:foregroundGravity="center"
+            android:paddingTop="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/bank_kb_logo"
+            tools:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/text_card_company"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/image_card_company"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:adjustViewBounds="true"
-                android:foregroundGravity="center"
-                android:paddingTop="10dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/bank_kb_logo"
-                tools:layout_gravity="center" />
-
-            <TextView
-                android:id="@+id/text_card_company"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:text="KB"
-                android:textSize="14dp" />
-        </LinearLayout>
-
-    </RelativeLayout>
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:fontFamily="@font/nanumsquarer"
+            android:gravity="center_vertical|right"
+            android:text="KB"
+            android:textColor="@color/black"
+            android:textSize="14dp" />
+    </LinearLayout>
 
 
 </LinearLayout>
