--- a/2ndProj/app/src/main/res/layout/item_msg_main_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_msg_main_list.xml
@@ -31,7 +31,7 @@
 
         <LinearLayout
             android:id="@+id/layout_item_msg_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -53,7 +53,7 @@
                     android:paddingLeft="10dp"
                     android:paddingTop="10dp"
 
-                    android:text="[완도구청]"
+                    android:text="울산광역시 전체"
                     android:textColor="@color/black"
                     android:textSize="12dp" />
 
