--- a/2ndProj/app/src/main/res/drawable/background_msg_circle_item_2.xml
+++ b/2ndProj/app/src/main/res/drawable/background_msg_circle_item_2.xml
@@ -4,6 +4,9 @@
     android:shape="oval">
     <corners android:radius="7dp"/>
     <solid android:color="#439182"/>
+    <size
+        android:width="20dp"
+        android:height="20dp"/>
 
 
 </shape>
