--- a/2ndProj/app/src/main/res/layout-v14/activity_main.xml
+++ b/2ndProj/app/src/main/res/layout-v14/activity_main.xml
@@ -37,6 +37,7 @@
             android:src="@drawable/setting" />
 
         <ImageView
+            android:id="@+id/refresh_main_activity"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
