--- a/2ndProj/app/src/main/res/layout/activity_alarm_setting.xml
+++ b/2ndProj/app/src/main/res/layout/activity_alarm_setting.xml
@@ -12,7 +12,6 @@
         android:id="@+id/linear_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@color/white"
         android:orientation="vertical"
@@ -23,11 +22,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <ImageView
+            android:id="@+id/back_setting_activity"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:clickable="true"
+            android:padding="10dp"
+            android:layout_marginTop="7dp"
+            android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/back"/>
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
             android:fontFamily="@font/nanumsquareeb"
             android:gravity="center_horizontal"
             android:text="알림 설정"
@@ -40,6 +51,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="16dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
@@ -50,16 +62,18 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center_horizontal"
             android:textColor="@color/black"
-            tools:text="관심도에 따라 알림을 설정할 수 있어요!" />
+            android:text="관심도에 따라 알림을 설정할 수 있어요!" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="3dp"
             android:fontFamily="@font/nanumsquarer"
             android:gravity="center"
@@ -105,9 +119,9 @@
                 android:paddingRight="15dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
+                android:theme="@style/SCBSwitch"
                 android:thumbTint="@color/twitterLowBlue"
-                tools:checked="false"
-                android:theme="@style/SCBSwitch"/>
+                tools:checked="false" />
         </LinearLayout>
 
         <TextView
@@ -128,11 +142,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
-        app:layout_constraintVertical_bias="0.3">
+        app:layout_constraintVertical_bias="0.050000012">
 
         <View
             android:id="@+id/view4"
@@ -183,8 +197,8 @@
                 android:scaleX="1.2"
                 android:scaleY="1.1"
                 android:textColor="#FFFFFF"
-                android:thumbTint="@color/green1"
-                android:theme="@style/level1Switch"/>
+                android:theme="@style/level1Switch"
+                android:thumbTint="@color/green1" />
         </LinearLayout>
 
         <LinearLayout
@@ -219,9 +233,8 @@
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
-                android:thumbTint="@color/green2"
                 android:theme="@style/level2Switch"
-               />
+                android:thumbTint="@color/green2" />
         </LinearLayout>
 
         <LinearLayout
@@ -256,9 +269,8 @@
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
-                android:thumbTint="@color/green3"
                 android:theme="@style/level3Switch"
-                />
+                android:thumbTint="@color/green3" />
         </LinearLayout>
 
     </LinearLayout>
@@ -273,8 +285,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_header"
-        app:layout_constraintVertical_bias="0.62">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+        app:layout_constraintVertical_bias="0.120000005">
 
         <View
             android:id="@+id/view3"
@@ -318,8 +330,8 @@
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
-                android:thumbTint="@color/twitterLowBlue"
-                android:theme="@style/SCBSwitch"/>
+                android:theme="@style/SCBSwitch"
+                android:thumbTint="@color/twitterLowBlue" />
 
         </LinearLayout>
 
@@ -348,8 +360,8 @@
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
-                android:thumbTint="@color/twitterLowBlue"
-                android:theme="@style/SCBSwitch"/>
+                android:theme="@style/SCBSwitch"
+                android:thumbTint="@color/twitterLowBlue" />
 
         </LinearLayout>
 
