--- a/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
+++ b/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
@@ -77,7 +77,7 @@
             android:hint="ex ) 우리집, 할머니집"
             android:inputType="text"
             android:maxLines="1"
-            android:textColor="@color/default_gray"
+            android:textColor="@color/black"
             android:textColorHighlight="#DCDADA"
             android:textColorHint="#DCDADA"
             android:textColorLink="#DCDADA"
@@ -239,6 +239,5 @@
     </FrameLayout>
 
 </LinearLayout>
-
 
 
