merge-sb(fcm_알림쌓기 추가)

--- a/2ndProj/app/src/main/res/layout/activity_alarm_setting.xml
+++ b/2ndProj/app/src/main/res/layout/activity_alarm_setting.xml
@@ -115,7 +115,7 @@
 
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="15dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
@@ -182,6 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="@font/nanumsquarer"
                 android:text="level1"
                 android:textColor="@color/default_gray"
@@ -192,7 +193,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
@@ -219,6 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="@font/nanumsquarer"
                 android:text="level2"
                 android:textColor="@color/default_gray"
@@ -229,7 +231,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
@@ -255,6 +257,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="@font/nanumsquarer"
                 android:text="level3"
                 android:textColor="@color/default_gray"
@@ -265,7 +268,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
@@ -326,7 +329,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
@@ -356,7 +359,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:gravity="right"
+                android:gravity="right|center_vertical"
                 android:paddingRight="20dp"
                 android:scaleX="1.2"
                 android:scaleY="1.1"
