--- a/2ndProj/app/src/main/res/layout/activity_main.xml
+++ b/2ndProj/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,26 @@
             android:contentDescription="TODO" />
 
         <ImageView
-            android:id="@+id/refresh_main_activity"
+            android:id="@+id/icon_corona_info"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
             android:layout_marginTop="3dp"
             android:layout_marginRight="50dp"
+            android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bar_chart"
+            android:contentDescription="TODO" />
+
+        <ImageView
+            android:id="@+id/refresh_main_activity"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="92dp"
             android:adjustViewBounds="true"
             android:background="@color/colorTransparent"
             android:padding="5dp"
